# jarvis-langchain-server

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: router.py
app/config/: logging_config.py  services.py  settings.py
app/dto/: rag_response.py
app/services/: cache_service.py  category_classifier.py  llm_service.py  rag_service.py  service_registry.py  vectordb_service.py
app/templates/: generic_template.py
app/utils/: service_utils.py
cache/: chroma.sqlite3
db/: chroma.sqlite3
models/: category_classifier.pkl  label_binarizer.pkl  xgb_background.pkl  xgb_contact.pkl  xgb_education.pkl  xgb_experience.pkl  xgb_personal.pkl  xgb_projects.pkl  xgb_skills.pkl
